Actually use the correct social links :S

--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ social:
   - title: twitter
     url: http://twitter.com/codecoffeeyvr
   - title: slack
-    url: http://slack.vandev.com/
+    url: http://yvrdev.slack.com/
   - title: youtube
     url: https://www.youtube.com/channel/UCQaXHorjVswT9xm8Ho7G0RQ
   - title: github
-    url: http://github.com/codecoffeeyvr
+    url: https://github.com/Code-and-Coffee-YVR
 
 # Postal address (add as many lines as necessary)
 address:
